Resolved small whitespace on bottom of screen.

--- a/css/i-html/index.css
+++ b/css/i-html/index.css
@@ -70,7 +70,7 @@
 }
 
 .credit-sect {
-    height: 3%;
+    height: 3.5%;
     width: 100%;
     margin: auto;
 }
